Type error for page queries fixed
